# llm-research

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  command_to_run.txt  feb-19-requirements.txt  narval-setup.sh  preprocess_qa_datasets.ipynb  pyproject.toml  request_interactive_gpu.sh  setup.py  setup.sh
configs/: gemma2_flags.txt  gemma2_squadv2_13_lora_flags.txt  gemma2_squadv2_8192_13_lora_flags.narval.txt  gemma2_squadv2_8192_13_lora_flags.txt  gpt2_squadv2_8192_13_flags.narval.txt  llama3.1_squadv2_13_lora_flags.txt  llama3.2_hard_em_squadv2_13_1024_lora_flags.txt  llama3.2_iterative_squadv2_13_1024_lora_flags.txt  llama3.2_mml_iterative_reinforce_squadv2_13_1024_lora_flags.txt  llama3.2_mml_squadv2_13_1024_lora_flags.txt  llama3.2_reinforce_squadv2_13_1024_lora_flags.txt  llama3.2_reinforce_terminal_reward_squadv2_13_1024_lora_flags.txt  llama3.2_reinforce_with_entropy_squadv2_13_1024_lora_flags.txt  llama3.2_teacher_forcing_reinforce_squadv2_13_1024_lora_flags.txt  llama3.2_teacher_forcing_squadv2_13_1024_lora_flags.txt  llama3_squadv2_1024_13_flags.txt  llama3_squadv2_13_lora_flags.txt  llama3_squadv2_16_13_flags.txt  llama3_squadv2_8192_13_dora_flags.narval.txt  llama3_squadv2_8192_13_lora_flags.narval.txt  llama3_squadv2_8192_13_lora_flags.txt  llama3_squadv2_normal_no_icl_zero_shot_inference_flags.narval.txt  squadv2_inference_flags.txt
data/: preprocess_qa_datasets.ipynb
inference/: README.md  venv.sh
job_submission/: README.md  env_up.sh  gemini_squad.slrm  gemma_job.slrm  jupyter_job.slrm  launch.sh  server.slrm  (+5 more)
(+276 files in other folders)
