[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"
skip_gitignore = true

[tool.mypy]
ignore_missing_imports = true
install_types = true
pretty = true
non_interactive = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true